--- a/style.css
+++ b/style.css
@@ -369,84 +369,86 @@ address {
 }
 
 .contact-info {
-  display: flex;
-  justify-content: space-between;
-  padding: 40px 20px;
+    display: flex;
+    justify-content: space-between;
+    
 }
 
 .info-text {
-  max-width: 50%;
-  padding: 20px;
-  font-size: 1.2rem;
+    max-width: 50%;
+    padding: 0px;
+    font-size: 1.2rem;
 }
 
 .map iframe {
-  width: 500px;
-  height: 250px;
-  border: none;
-  display: flex;
-  padding: 0px;
-  margin-left: 42.4%;
+    width: 500px;
+    height: 250px;
+    border: none;
+    display: flex;
+    padding: 0px;
+    margin-left: 34.4%;
+    margin-bottom: 10%;
 }
 
 .form-section {
-  width: 100%;
-  height: 50vh;
-  display: flex;
-  background-color: #336863;
-  padding: 10px;
-  gap: 30px;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
+    width: 100%;
+    height: 50vh;
+    display: flex;
+    background-color: #336863;
+    padding: 10px;
+    gap: 30px;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .contact-form {
-  flex: 1;
-  min-width: 300px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
+    flex: 1;
+    min-width: 300px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .contact-form input,
 .contact-form textarea {
-  padding: 10px;
-  font-size: 1rem;
-  border: none;
-  border-radius: 2px;
+    padding: 10px;
+    font-size: 1rem;
+    border: none;
+    border-radius: 2px;
 }
 
 .contact-form button {
-  background-color: #154c3f;
-  color: white;
-  padding: 12px;
-  font-size: 1.1rem;
-  border: none;
-  cursor: pointer;
+    width: 30%;
+    background-color: #154c3f;
+    color: white;
+    padding: 12px;
+    font-size: 1.1rem;
+    border: none;
+    cursor: pointer;
 }
 
 img
 /*.form-image {
-  flex: 1;
-  max-width: 400px;
-  text-align: center;
+    flex: 1;
+    max-width: 400px;
+    text-align: center;
 }
 
 /form-image img {
-  max-width: 100%;
-  height: auto;
+    max-width: 100%;
+    height: auto;
 }*/
 
 footer {
-  background-color: #d8d1c4;
-  text-align: center;
-  padding: 15px;
-  font-size: 0.9rem;
+    background-color: #d8d1c4;
+    text-align: center;
+    padding: 15px;
+    font-size: 0.9rem;
 }
 
 footer a {
-  color: inherit;
-  text-decoration: none;
-  margin: 0 5px;
+    color: inherit;
+    text-decoration: none;
+    margin: 0 5px;
 }
